# todos_backend

./: .gitignore  CHANGELOG.md  Installation_README.md  PYTEST_SETUP.md  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 853fc1cecec8_create_phone_number_col_on_user_column.py
backend/: __init__.py  alembic.ini  main.py  models.py  requirements.txt
backend/routers/: admin.py  auth.py  todos.py  users.py
backend/schemas/: todo.py
backend/tests/: comftest.py  conftest.py  test_admin.py  test_auth.py  test_example.py
backend/tests/factories/: auth.py
backend/tests/integration/: __init__.py  conftest.py  test_admin.py  test_todos_integration.py  test_todos_with_factory_update.py  test_user_integration.py
backend/tests/reference/: pytest_fixture.txt
backend/tests/summary/: best_practice.txt
backend/tests/unit/: test_skiptests_kumar.py  test_todos_unit.py  test_user_factory.py  test_user_model_unit.py  test_user_unit.py  test_users_with_factory_update.py
backend/tests/utils/: __init__.py  auth.py  db_connections.py  test_db_setup.py
backend/tests/utils/factories/: auth.py  todos.py
backend/tests/utils/fixtures/: DELETE_user_integration.py  db_fixtures.py  (+2 more)
routers/: admin.py  auth.py  todos.py  users.py
test/: conftest.py  pytest_object.py  test_admin.py  test_auth.py  test_main.py  test_todos.py  utils.py
test/integration/: test_todos.py
test/unit/: __init__.py  test_todos.py
tests/: conftest.py  test_main.py  test_todos.py  test_users.py  utils.py
utils/database/: connection.py
(+8 files in other folders)
